<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_texture"
    >

    <TextView
        android:id="@+id/app_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="@+id/top"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintEnd_toEndOf="@id/center"

        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="#D0101010"
        android:textSize="80dp"
        android:textStyle="italic|bold"

        android:shadowColor="#80000000"
        android:shadowRadius="10"
        android:shadowDx="7"
        android:shadowDy="7"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/app_version"
    />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_client"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@+id/app_name_view"
        app:layout_constraintLeft_toLeftOf="@id/image_left"
        app:layout_constraintRight_toRightOf="@id/image_right"
    />
    <TextView
        android:id="@+id/login_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        app:layout_constraintLeft_toLeftOf="@+id/button_left"
        app:layout_constraintRight_toLeftOf="@+id/button_right"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:gravity="center"
    />
    <Button
        android:id="@+id/fb_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/login_with_facebook"
        android:textColor="@color/com_facebook_button_text_color"
        android:background="@drawable/login_facebook_background"
        app:layout_constraintTop_toBottomOf="@+id/login_name"
        app:layout_constraintLeft_toLeftOf="@+id/button_left"
        app:layout_constraintRight_toLeftOf="@+id/button_right"
        style="@style/login_button"
    />
    <Button
        android:id="@+id/google_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/login_with_google"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:background="@drawable/login_google_background"
        app:layout_constraintTop_toBottomOf="@+id/fb_login_button"
        app:layout_constraintLeft_toLeftOf="@+id/button_left"
        app:layout_constraintRight_toLeftOf="@+id/button_right"
        style="@style/login_button"
    />
    <Button
        android:text="@string/play"
        android:id="@+id/play_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/google_login_button"
        app:layout_constraintLeft_toLeftOf="@+id/button_left"
        app:layout_constraintRight_toLeftOf="@+id/button_right"
        android:layout_marginTop="@dimen/button_margin"
    />
    <Button
        android:text="@string/settings"
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/play_button"
        app:layout_constraintLeft_toLeftOf="@+id/button_left"
        app:layout_constraintRight_toLeftOf="@+id/button_right"
        android:layout_marginTop="@dimen/button_margin"
    />
    <Button
        android:text="@string/rules"
        android:id="@+id/rules_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/settings_button"
        app:layout_constraintLeft_toLeftOf="@+id/button_left"
        app:layout_constraintRight_toLeftOf="@+id/button_right"
        android:layout_marginTop="@dimen/button_margin"
    />
    <Button
        android:text="@string/donation"
        android:id="@+id/donate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rules_button"
        app:layout_constraintLeft_toLeftOf="@+id/button_left"
        app:layout_constraintRight_toLeftOf="@+id/button_right"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@drawable/player_message_background"
        android:visibility="gone"
    />
    <Button
        android:text="@string/logout"
        android:id="@+id/logout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/donate_button"
        app:layout_constraintLeft_toLeftOf="@+id/button_left"
        app:layout_constraintRight_toLeftOf="@+id/button_right"
        android:layout_marginTop="@dimen/button_margin"
    />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="horizontal"
    />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="horizontal"
    />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
    />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
    />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.22"
    />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.78"
    />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
